# bevy_mod_mipmap_generator

./: .gitignore  Cargo.toml  README.md
assets/models/Wood/: wood.gltf
examples/: load_gltf.rs  test_compression.rs  test_image.rs
src/: lib.rs
