[package]
name = "bevy_mod_mipmap_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { version = "0.14", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_gltf",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "jpeg",
    "multi_threaded",
] }
image = "0.24"
futures-lite = "1.12"

[dev-dependencies]
bevy = { version = "0.14" }

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
