[package]
name = "bevy_mod_mipmap_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { version = "0.16", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_gltf",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "jpeg",
    "multi_threaded",
] }
image = { version = "0.25", default-features = false }
futures-lite = "2.6"
intel_tex_2 = { version = "0.4.0", optional = true }
zstd = { version = "0.13.2", optional = true }

[dev-dependencies]
bevy = { version = "0.16" }

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug_text"]
compress = ["dep:intel_tex_2", "dep:zstd"]
debug_text = ["bevy/bevy_ui"]
